изменения на пк лежали
